--- a/bitmex.cabal
+++ b/bitmex.cabal
@@ -2,10 +2,10 @@ name:                bitmex
 version:             0.1.0.0
 synopsis:            Auto-generated API bindings for bitmex
 description:         Please see README.md
-homepage:            https://github.com/swagger-api/swagger-codegen#readme
-author:              Author Name Here
-maintainer:          author.name@email.com
-copyright:           YEAR - AUTHOR
+homepage:            https://github.com/unhappychoice/bitmex-servant
+author:              unhappychoice
+maintainer:          unhappychoice@gmail.com
+copyright:           2019 - unhappychoice
 category:            Web
 build-type:          Simple
 cabal-version:       >=1.10
