:green_heart: Stop nightly build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,13 +65,10 @@ workflows:
   test:
     jobs:
       - test
-  nightly:
-    triggers:
-      - schedule:
-          cron: "0 0 * * *"
-          filters:
-            branches:
-              only:
-                - master
+  build:
+   filters:
+     branches:
+       only:
+         - build
     jobs:
       - build
